--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
+    "elevenlabs-node": "^2.0.3",
     "embla-carousel-react": "^8.6.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
